[gd_scene load_steps=12 format=2]

[ext_resource path="res://Src/UserInterface/RetryButton.tscn" type="PackedScene" id=1]
[ext_resource path="res://Src/UserInterface/Title.tscn" type="PackedScene" id=2]
[ext_resource path="res://Src/UserInterface/ChangeSceneButton.tscn" type="PackedScene" id=3]
[ext_resource path="res://Src/UserInterface/QuitButton.tscn" type="PackedScene" id=4]
[ext_resource path="res://assets/Theme/ui_theme.tres" type="Theme" id=5]
[ext_resource path="res://Src/UserInterface/UserInterface.gd" type="Script" id=6]
[ext_resource path="res://Src/UserInterface/HealthBar.tscn" type="PackedScene" id=7]
[ext_resource path="res://assets/misc/Icons/bow.png" type="Texture" id=8]
[ext_resource path="res://assets/misc/Icons/sword.png" type="Texture" id=9]
[ext_resource path="res://assets/misc/Icons/arrow.png" type="Texture" id=10]
[ext_resource path="res://assets/Fonts/Batlagor.tres" type="DynamicFont" id=11]

[node name="UserInterface" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -3.0
margin_top = 3.0
margin_right = -3.0
margin_bottom = 3.0
theme = ExtResource( 5 )
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Score" type="Label" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -109.0
margin_top = 30.0
margin_right = -29.0
margin_bottom = 50.0
text = "Score : %s"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HealthBar" parent="." instance=ExtResource( 7 )]
margin_left = -0.554565
margin_right = -0.554565

[node name="PauseOverlay" type="ColorRect" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -4.0
margin_top = 1.0
margin_right = -4.0
margin_bottom = 1.0
color = Color( 0, 0, 0, 0.231373 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" parent="PauseOverlay" instance=ExtResource( 2 )]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = -112.0
margin_top = -180.0
margin_right = 112.0
margin_bottom = -124.0
text = "Paused"

[node name="PauseMenu" type="VBoxContainer" parent="PauseOverlay"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -95.0
margin_top = -104.0
margin_right = 95.0
margin_bottom = 104.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RetryButton" parent="PauseOverlay/PauseMenu" instance=ExtResource( 1 )]
margin_right = 190.0
margin_bottom = 66.0

[node name="ChangeSceneButton" parent="PauseOverlay/PauseMenu" instance=ExtResource( 3 )]
margin_top = 70.0
margin_right = 190.0
margin_bottom = 136.0
text = "Main Screen"
next_scene_path = "res://Src/Screens/MainScreen.tscn"

[node name="QuitButton" parent="PauseOverlay/PauseMenu" instance=ExtResource( 4 )]
margin_top = 140.0
margin_right = 190.0
margin_bottom = 208.0

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -119.0
margin_top = 7.0
margin_right = -10.0
margin_bottom = 27.0
theme = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MinuteLabel" type="Label" parent="HBoxContainer"]
margin_right = 27.0
margin_bottom = 20.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "%s"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Dot" type="Label" parent="HBoxContainer"]
margin_left = 31.0
margin_right = 36.0
margin_bottom = 20.0
size_flags_vertical = 1
text = "."
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SecondLabel" type="Label" parent="HBoxContainer"]
margin_left = 40.0
margin_right = 67.0
margin_bottom = 20.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "%s "
align = 1
valign = 1

[node name="Dot2" type="Label" parent="HBoxContainer"]
margin_left = 71.0
margin_right = 76.0
margin_bottom = 20.0
size_flags_vertical = 1
text = "."
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MillisecondLabel" type="Label" parent="HBoxContainer"]
margin_left = 80.0
margin_right = 109.0
margin_bottom = 20.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "%s"
align = 1
valign = 1

[node name="Weapon" type="Control" parent="."]
margin_left = 18.0
margin_top = 53.75
margin_right = 58.0
margin_bottom = 93.75

[node name="BowImage" type="TextureRect" parent="Weapon"]
margin_right = 40.0
margin_bottom = 40.0
texture = ExtResource( 8 )
expand = true
stretch_mode = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="Weapon/BowImage"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 30.1979
margin_top = -9.32806
margin_right = 97.1979
margin_bottom = 18.6719
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="Weapon/BowImage/HBoxContainer"]
margin_right = 24.0
margin_bottom = 27.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 10 )
expand = true
stretch_mode = 1

[node name="ArrowsNumber" type="Label" parent="Weapon/BowImage/HBoxContainer"]
modulate = Color( 0, 0, 0, 1 )
margin_left = 28.0
margin_right = 67.0
margin_bottom = 27.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 11 )
text = "Ã— %s "
align = 1
valign = 2

[node name="SwordImage" type="TextureRect" parent="Weapon"]
visible = false
margin_right = 40.0
margin_bottom = 40.0
texture = ExtResource( 9 )
expand = true
stretch_mode = 1
__meta__ = {
"_edit_use_anchors_": false
}
